tests/ucc/type/good/fun-fwd-decl-1.c
int f();

int f(void)
{
    return 0;
}
