tests/ucc/type/bad/non-scalar-for.c
struct a
{
    int a;
};

int main(void)
{
    struct a a;

    for (; a;)
        ;

    return 0;
}
